--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
-/* #root {
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+
 /* RESET */
 *,
 *::before,
@@ -50,6 +46,7 @@ body {
 .main {
 	flex: 1;
 	max-width: 1200px;
+	/* width: 100%; */
 	margin: 0 auto;
 	padding: 20px;
 }
