--- a/src/pages/BookDetails.module.css
+++ b/src/pages/BookDetails.module.css
@@ -1,5 +1,3 @@
-
-
 .wrapper {
   display: flex;
   gap: 40px;
@@ -7,7 +5,9 @@
   background: white;
   padding: 25px;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  flex-wrap: wrap;
+  max-width: 700px;
 }
 
 .image {
@@ -31,14 +31,28 @@
 
 .button {
   margin-top: 15px;
+  margin-right: 10px;
   padding: 8px 14px;
   background: #222;
   color: white;
   border-radius: 6px;
+  border: 1px solid #222;
+  transition: all 0.25s ease;
+}
+
+.button:hover {
+  box-shadow: 0 0 8px rgba(255, 77, 0, 0.695);
+  transform: translateY(-2px);
 }
 
 .link {
   display: inline-block;
   margin-top: 10px;
   color: #0066cc;
+}
+
+@media (max-width: 560px) {
+  .image {
+    width: 100%;
+  }
 }
